--- a/hw2/quadricEq.html
+++ b/hw2/quadricEq.html
@@ -27,7 +27,7 @@
 </div>
 <h2>Таблица результатов</h2>
 <table>
-    <tr id="table"><td><p>№</p></td><td><p>Уравнение</p></td><td><p>Решение</p></td></tr>
+    <tr id="table"><th><p>№</p></th><th><p>Уравнение</p></th><th><p>Решение</p></th></tr>
 </table>
 </body>
 </html>
